--- a/docs/notebooks/xenium/vitessce_xenium.ipynb
+++ b/docs/notebooks/xenium/vitessce_xenium.ipynb
@@ -80,9 +80,9 @@
     "table_layer = \"table_global\"\n",
     "\n",
     "array=sdata[ img_layer ][ \"scale0\" ][\"image\"].data.compute()\n",
-    "multiplex_img_to_ome_zarr( img_arr=array, channel_names=[ \"grey\" ], axes=\"cyx\",  output_path=output_path_img)\n",
+    "multiplex_img_to_ome_zarr( img_arr=array, channel_names=[ \"grey\" ], axes=\"cyx\",  output_path=output_path_img) # Using chunks of (1,2048,2048) results in faster rendering\n",
     "array=sdata[ labels_layer ][\"scale0\"][ \"image\" ].data.compute()\n",
-    "multiplex_img_to_ome_zarr( img_arr=array[ None,... ], channel_names=[ \"grey\" ], axes=\"cyx\",  output_path=output_path_masks )\n",
+    "multiplex_img_to_ome_zarr( img_arr=array[ None,... ], channel_names=[ \"grey\" ], axes=\"cyx\",  output_path=output_path_masks ) # Using chunks of (1,2048,2048) results in faster rendering\n",
     "\n",
     "adata=sdata[ table_layer ]\n",
     "\n",
